# Education

./: education.sh
projects/examples/source/: 03.11  03.11.cpp  03.12  03.12.cpp
projects/hw/02.02/: 02  02.02.cpp
projects/hw/02.03/: 02.03.cpp  a.out
projects/hw/02.05/: 02.05  02.05.cpp
projects/hw/02.06/: 02.06  02.06.cpp
projects/hw/02.07/: 02.07  02.07.cpp
projects/hw/02.10/: 02.10
projects/hw/03.05/: 03  03.05.cpp
projects/hw/03.06/: 03.06  03.06.cpp
projects/hw/03.07/: 03.07  03.07.cpp
projects/hw/03.09/: 03.09  03.09.cpp
projects/hw/03.10/: 03.10  03.10.cpp
projects/hw/04.01/: 04.01  04.01.cpp
projects/hw/04.02/: 04.02  04.02.cpp
projects/hw/04.03/: 04.03  04.03.cpp
projects/hw/04.04/: 04.04  04.04.cpp
projects/hw/04.05/: 04.05  04.05.cpp
projects/hw/04.06/: 04.06  04.06.cpp
projects/hw/04.07/: 04.07  04.07.cpp
projects/hw/04.08/: 04.08  04.08.cpp
projects/hw/04.09/: 04.09  04.09.cpp
projects/hw/04.10/: 04.10  04.10.cpp
projects/hw/05.01/: 05.01  05.01.cpp
projects/hw/05.02/: 05.02  05.02.cpp
projects/hw/05.03/: 05.03  05.03.cpp
projects/hw/05.04/: 05.04  05.04.cpp
projects/hw/05.05/: 05.05  05.05.cpp
projects/hw/06.01/: 06.01  06.01.cpp  rational.cpp  rational.hpp
projects/hw/06.02/: 06.02.cpp  rational.cpp  rational.helpers.ixx  rational.ixx
projects/hw/06.05/: 06.05.cpp  CMakeLists.txt  libshared_v1.cpp  libshared_v2.cpp
projects/hw/07.01/: 07.01  07.01.cpp
projects/hw/09.04/: 09.04.cpp
projects/hw/10.05/: 10.05  10.05.cpp  10.05_APHash.csv  10.05_BKDRHash.csv  10.05_DEKHash.csv  10.05_DJBHash.csv  (+7 more)
(+8 files in other folders)
